# bymebank

./: .env.example  .gitignore  DEPLOY.md  README.md  e2e-dashboards.ps1  e2e-spring-bridge.ps1  full-flow-test.ps1  render.yaml  run-everything.ps1
admin-dashboard/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
admin-dashboard/src/: App.tsx  index.css  main.tsx
admin-dashboard/src/api/: client.ts
admin-dashboard/src/components/: BankBadge.tsx  BankLogo.tsx  Counter.tsx  FeatureCard.tsx  FinalCTA.tsx  HowItWorksFlow.tsx  KhqrReceiptCard.tsx  Logo.tsx  PaymentFlow.tsx  PrimaryCTA.tsx  ScrollProgress.tsx  StatusBadge.tsx  TelegramNotifyPanel.tsx  VantaGlobe.tsx
admin-dashboard/src/hooks/: useLinkedBanks.ts  useNoInspect.ts
bot-bridge/: .env.example  Dockerfile  README.md  _qr_aba.json  logos_store.json  requirements.txt  test_buy_key_wizard.py  test_logos.py
bot-bridge/app/: bot_client.py  config.py  logos.py  main.py  schemas.py  security.py
docker/: docker-compose.oracle.yml  docker-compose.yml
docker/oracle-bootstrap/: 01-create-user.sql  02-create-khmerbank.sql  99-reset.sql
docs/: ARCHITECTURE.md  ORACLE.md
sdk-java/: README.md  pom.xml  run-demo.ps1
sdk-java/examples/: GenerateQrExample.java
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: full_demo.py  generate_qr.py  webhook_handler.py
sdk-python/khmerbank/: __init__.py  client.py  exceptions.py  http_client.py  models.py  webhook.py
server/: pom.xml
(+160 files in other folders)
